// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/todo-list/TodoList > should render correctly 1`] = `
.c15 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  background: #f0f0f0;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c17 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-right: 5px;
  background: #f0f0f0;
}

.c17:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c17:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c17:disabled {
  color: #c0c0c0;
}

.c24 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
}

.c24:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c24:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c24:disabled {
  color: #c0c0c0;
}

.c14 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c14:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c14:disabled {
  color: #c0c0c0;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 18px;
  line-height: 30px;
  font-weight: normal;
  margin: 0;
}

.c18 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 {
  border-bottom: 1px solid #c0c0c0;
}

.c19:last-child {
  border-bottom: none;
}

.c12 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  color: #222;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: 30px;
}

.c10 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  width: 20px;
  height: 20px;
  border: 2px solid #222;
  color: #222;
  background: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c10:hover {
  background-color: #fcfcfc;
}

.c10:focus-within {
  outline: 1px dotted #222;
}

.c11 {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  opacity: 0;
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

.c21 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 5px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  width: 20px;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c22 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 100%;
  padding: 5px 10px;
  background: #fff;
  border: none;
  outline: none;
}

.c4:hover:not(:disabled) {
  background-color: #fcfcfc;
}

.c4:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c4:disabled {
  color: #c0c0c0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: calc(30px + 1px);
  border-bottom: 1px solid #c0c0c0;
  background: #f0f0f0;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c16 {
  position: relative;
  display: inline-block;
}

.c1 {
  margin-bottom: 1px;
}

<div>
  <div
    class=""
  >
    <h1
      class="c0 c1"
    >
      Úkoly
    </h1>
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <input
          class="c4"
          maxlength="100"
          placeholder="Hledaný výraz..."
          type="text"
          value=""
        />
      </div>
      <button
        class="c5 c6"
        type="button"
      >
        <span
          class="c7"
        >
          Hledat
        </span>
      </button>
      <button
        class="c5 c6"
        disabled=""
        type="button"
      >
        <span
          class="c7"
        >
          Zrušit
        </span>
      </button>
    </form>
    <div
      class="c8"
    >
      <div>
        <div
          class="c9"
        >
          <label
            class="c10"
            for="checkbox-4"
          >
            <input
              class="c11"
              id="checkbox-4"
              type="checkbox"
            />
          </label>
          <label
            class="c12"
            for="checkbox-4"
          >
            Vybrat vše
          </label>
        </div>
      </div>
      <div
        class="c13"
      />
      <div>
        <a
          class="c14"
          href="/todo/create"
        >
          <i
            class="c15"
          >
            +
          </i>
          <span
            class="c7"
          >
            Vytvořit
          </span>
        </a>
      </div>
      <div>
        <div
          class="c16"
        >
          <button
            class="c5 c17"
            type="button"
          >
            <span
              class="c7"
            >
              Nejnovější
            </span>
            <i
              class="c15"
            >
              ˅
            </i>
          </button>
        </div>
      </div>
    </div>
    <ul
      class="c18"
    >
      <li
        class="c19"
      >
        <div
          class="c20"
        >
          <div
            class=""
          >
            <div
              class="c9"
            >
              <label
                class="c10"
                for="checkbox-5"
              >
                <input
                  class="c11"
                  id="checkbox-5"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
          <a
            class="c21"
            href="/todo/A"
          >
            Todo A
          </a>
          <div
            class="c22"
          >
            1. 1. 1970
          </div>
          <div
            class="c23"
            title=""
          >
            <i
              class="c15"
            >
              -
            </i>
          </div>
          <div
            class=""
          >
            <a
              class="c14"
              href="/todo/A"
            >
              <i
                class="c15"
              >
                ✎
              </i>
              <span
                class="c7"
              >
                Upravit
              </span>
            </a>
          </div>
          <div
            class=""
          >
            <button
              class="c5 c24"
              type="button"
            >
              <i
                class="c15"
              >
                ✖
              </i>
              <span
                class="c7"
              >
                Smazat
              </span>
            </button>
          </div>
        </div>
      </li>
      <li
        class="c19"
      >
        <div
          class="c20"
        >
          <div
            class=""
          >
            <div
              class="c9"
            >
              <label
                class="c10"
                for="checkbox-6"
              >
                <input
                  class="c11"
                  id="checkbox-6"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
          <a
            class="c21"
            href="/todo/B"
          >
            Todo B
          </a>
          <div
            class="c22"
          >
            1. 1. 1970
          </div>
          <div
            class="c23"
            title="Hotovo"
          >
            <i
              class="c15"
            >
              ✔
            </i>
          </div>
          <div
            class=""
          >
            <a
              class="c14"
              href="/todo/B"
            >
              <i
                class="c15"
              >
                ✎
              </i>
              <span
                class="c7"
              >
                Upravit
              </span>
            </a>
          </div>
          <div
            class=""
          >
            <button
              class="c5 c24"
              type="button"
            >
              <i
                class="c15"
              >
                ✖
              </i>
              <span
                class="c7"
              >
                Smazat
              </span>
            </button>
          </div>
        </div>
      </li>
      <li
        class="c19"
      >
        <div
          class="c20"
        >
          <div
            class=""
          >
            <div
              class="c9"
            >
              <label
                class="c10"
                for="checkbox-7"
              >
                <input
                  class="c11"
                  id="checkbox-7"
                  type="checkbox"
                />
              </label>
            </div>
          </div>
          <a
            class="c21"
            href="/todo/C"
          >
            Todo B
          </a>
          <div
            class="c22"
          >
            1. 1. 1970
          </div>
          <div
            class="c23"
            title=""
          >
            <i
              class="c15"
            >
              -
            </i>
          </div>
          <div
            class=""
          >
            <a
              class="c14"
              href="/todo/C"
            >
              <i
                class="c15"
              >
                ✎
              </i>
              <span
                class="c7"
              >
                Upravit
              </span>
            </a>
          </div>
          <div
            class=""
          >
            <button
              class="c5 c24"
              type="button"
            >
              <i
                class="c15"
              >
                ✖
              </i>
              <span
                class="c7"
              >
                Smazat
              </span>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/todo-list/TodoList > should render empty list 1`] = `
.c15 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  background: #f0f0f0;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c17 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-right: 5px;
  background: #f0f0f0;
}

.c17:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c17:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c17:disabled {
  color: #c0c0c0;
}

.c14 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-left: 5px;
  background: #f0f0f0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c14:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c14:disabled {
  color: #c0c0c0;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 18px;
  line-height: 30px;
  font-weight: normal;
  margin: 0;
}

.c18 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
}

.c12 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  color: #c0c0c0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: 30px;
}

.c10 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  width: 20px;
  height: 20px;
  border: 2px solid #c0c0c0;
  color: #c0c0c0;
  background: #fff;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c11 {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  opacity: 0;
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 100%;
  padding: 5px 10px;
  background: #fff;
  border: none;
  outline: none;
}

.c4:hover:not(:disabled) {
  background-color: #fcfcfc;
}

.c4:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c4:disabled {
  color: #c0c0c0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  height: calc(30px + 1px);
  border-bottom: 1px solid #c0c0c0;
  background: #f0f0f0;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c16 {
  position: relative;
  display: inline-block;
}

.c1 {
  margin-bottom: 1px;
}

.c19 {
  padding-top: 10px;
}

<div>
  <div
    class=""
  >
    <h1
      class="c0 c1"
    >
      Úkoly
    </h1>
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <input
          class="c4"
          maxlength="100"
          placeholder="Hledaný výraz..."
          type="text"
          value=""
        />
      </div>
      <button
        class="c5 c6"
        type="button"
      >
        <span
          class="c7"
        >
          Hledat
        </span>
      </button>
      <button
        class="c5 c6"
        disabled=""
        type="button"
      >
        <span
          class="c7"
        >
          Zrušit
        </span>
      </button>
    </form>
    <div
      class="c8"
    >
      <div>
        <div
          class="c9"
        >
          <label
            class="c10"
            for="checkbox-9"
          >
            <input
              class="c11"
              disabled=""
              id="checkbox-9"
              type="checkbox"
            />
          </label>
          <label
            class="c12"
            for="checkbox-9"
          >
            Vybrat vše
          </label>
        </div>
      </div>
      <div
        class="c13"
      />
      <div>
        <a
          class="c14"
          href="/todo/create"
        >
          <i
            class="c15"
          >
            +
          </i>
          <span
            class="c7"
          >
            Vytvořit
          </span>
        </a>
      </div>
      <div>
        <div
          class="c16"
        >
          <button
            class="c5 c17"
            disabled=""
            type="button"
          >
            <span
              class="c7"
            >
              Nejnovější
            </span>
            <i
              class="c15"
              style="color: rgb(192, 192, 192);"
            >
              ˅
            </i>
          </button>
        </div>
      </div>
    </div>
    <p
      class="c18 c19"
    >
      Nebyly nalezeny žádné úkoly.
    </p>
  </div>
</div>
`;
